# reading-group-curriculum

./: AGENTS.md  CLAUDE.md  DISCOVERY.md  GEMINI.md  pyproject.toml  value-repos.json
.github/workflows/: ci.yml
tests/: test_data_export.py  test_repository.py
