[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reading-group-curriculum"
version = "0.3.0"
description = "Reading group curriculum management with reading lists, discussion guides, and session planning"
requires-python = ">=3.11"
dependencies = [
    "koinonia-db",
    "sqlalchemy>=2.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4.0"]

[project.scripts]
curriculum = "src.__main__:cli"
curriculum-data-export = "src.data_export:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = "warning"
